src/test/deca/syntax/invalid/without_class/missing_obrace_main_prog.deca
// Description:
//    Missing obrace in main  
//
// Result:
//    Syntax Error
//    line 8

return 0;
}
